InnoDB: Prevent ALTER TABLE ... ENGINE=... if there are foreign key constraints on the table. (Bug #5574)

sql/ha_innodb.cc:
  Add method can_switch_engines()
sql/ha_innodb.h:
  Add method can_switch_engines()
sql/handler.h:
  Add method can_switch_engines()
sql/sql_table.cc:
  Check handler::can_switch_engines() before switching storage engines